[Club] Fix read more button overlap on Safari (#6307)
* fix read more button overlap on safari

This keeps the Read More button from overlapping with the date text, in
Safari. It does not affect Firefox, nor Chrome.

Fixes: https://github.com/Automattic/themes/issues/6306

* remove formatting

--- a/club/style.css
+++ b/club/style.css
@@ -140,6 +140,7 @@ GNU General Public License for more details.
 .club-post-list-pattern .wp-block-column {
 	align-items: center;
 	display: flex;
+	min-width: unset;
 }
 
 .club-post-list-pattern .wp-block-post > .wp-block-group > .wp-block-columns > .wp-block-column:first-child {
